alex-brot/base/alex-brot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alex-brot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alex-brot-backend
  template:
    metadata:
      labels:
        app: alex-brot-backend
    spec:
      containers:
        - name: alex-brot-backend
          image: ghcr.io/alex-brot/alex-brot-backend:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: alex-brot-medusa
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app: alex-brot-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-brot
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: medusa.alex-brot.stenz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alex-brot-medusa
                port:
                  number: 9000
  tls:
    - secretName: alex-brot-backend-tls
      hosts:
        - medusa.alex-brot.stenz.dev
