alex-brot/base/storefront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alex-brot-storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alex-brot-storefront
  template:
    metadata:
      labels:
        app: alex-brot-storefront
    spec:
      containers:
        - name: alex-brot-storefront
          image: ghcr.io/alex-brot/alex-brot-storefront:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: alex-brot-storefront
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: alex-brot-storefront
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-brot-frontend
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: alex-brot.stenz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alex-brot-storefront
                port:
                  number: 8000
  tls:
    - secretName: alex-brot-storefront-tls
      hosts:
        - alex-brot.stenz.dev
