alex-brot/base/strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alex-brot-strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alex-brot-strapi
  template:
    metadata:
      labels:
        app: alex-brot-strapi
    spec:
      containers:
        - name: alex-brot-strapi
          image: ghcr.io/alex-brot/alex-brot-strapi:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: alex-brot-strapi
spec:
  ports:
    - port: 1337
      targetPort: 1337
      protocol: TCP
      name: http
  selector:
    app: alex-brot-strapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-brot-strapi
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: strapi.alex-brot.stenz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alex-brot-strapi
                port:
                  number: 1337
  tls:
    - secretName: alex-brot-strapi-tls
      hosts:
        - strapi.alex-brot.stenz.dev
